// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Date Time Range Selector Predefined List should render correctly 1`] = `
.c0 {
  background: #F0F3F7;
  border-right: 1px solid #D1DBE8;
  width: 140px;
  box-sizing: border-box;
}

.c1 {
  all: unset;
  width: 100%;
  font-size: 13px;
  line-height: 18px;
  display: inline-block;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  word-wrap: normal;
  padding: 8px 10px;
  box-sizing: border-box;
  overflow: hidden;
  color: #1C2025;
  cursor: default;
  position: relative;
  display: block;
  text-align: left;
}

.c1:focus-visible {
  box-shadow: inset 0 0 0 2px #0376DA;
}

.c1::after {
  content: '';
  position: absolute;
  background: #0376DA;
  width: 4px;
  top: 0;
  right: 0;
  height: 100%;
  display: block;
}

<div
  className="c0"
  data-id="DATE_TIME_RANGE_SELECTOR_DROPDOWN_PREDEFINED_LIST"
  data-test-id="DATE_TIME_RANGE_SELECTOR_DROPDOWN_PREDEFINED_LIST"
>
  <button
    className="c1"
    data-id="DATE_TIME_RANGE_SELECTOR_DROPDOWN_PREDEFINED_LIST_ITEM"
    data-test-id="DATE_TIME_RANGE_SELECTOR_DROPDOWN_PREDEFINED_LIST_ITEM"
    disabled={true}
    tabIndex={0}
  />
</div>
`;

exports[`Date Time Range Selector Predefined List should render correctly all predefined ranges 1`] = `
.c0 {
  background: #F0F3F7;
  border-right: 1px solid #D1DBE8;
  width: 140px;
  box-sizing: border-box;
}

.c1 {
  all: unset;
  width: 100%;
  font-size: 13px;
  line-height: 18px;
  display: inline-block;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  word-wrap: normal;
  padding: 8px 10px;
  box-sizing: border-box;
  overflow: hidden;
  color: #1C2025;
  cursor: pointer;
  position: relative;
  display: block;
  text-align: left;
}

.c1:focus-visible {
  box-shadow: inset 0 0 0 2px #0376DA;
}

.c1::after {
  content: '';
  position: absolute;
  background: #0376DA;
  width: 4px;
  top: 0;
  right: 0;
  height: 100%;
  display: none;
}

.c2 {
  all: unset;
  width: 100%;
  font-size: 13px;
  line-height: 18px;
  display: inline-block;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  word-wrap: normal;
  padding: 8px 10px;
  box-sizing: border-box;
  overflow: hidden;
  color: #1C2025;
  cursor: default;
  position: relative;
  display: block;
  text-align: left;
}

.c2:focus-visible {
  box-shadow: inset 0 0 0 2px #0376DA;
}

.c2::after {
  content: '';
  position: absolute;
  background: #0376DA;
  width: 4px;
  top: 0;
  right: 0;
  height: 100%;
  display: block;
}

<div
  className="c0"
  data-id="DATE_TIME_RANGE_SELECTOR_DROPDOWN_PREDEFINED_LIST"
  data-test-id="DATE_TIME_RANGE_SELECTOR_DROPDOWN_PREDEFINED_LIST"
>
  <button
    className="c1"
    data-id="DATE_TIME_RANGE_SELECTOR_DROPDOWN_PREDEFINED_LIST_ITEM"
    data-test-id="DATE_TIME_RANGE_SELECTOR_DROPDOWN_PREDEFINED_LIST_ITEM"
    onClick={[Function]}
    tabIndex={0}
  >
    Today
  </button>
  <button
    className="c1"
    data-id="DATE_TIME_RANGE_SELECTOR_DROPDOWN_PREDEFINED_LIST_ITEM"
    data-test-id="DATE_TIME_RANGE_SELECTOR_DROPDOWN_PREDEFINED_LIST_ITEM"
    onClick={[Function]}
    tabIndex={0}
  >
    Last X Weeks
  </button>
  <button
    className="c2"
    data-id="DATE_TIME_RANGE_SELECTOR_DROPDOWN_PREDEFINED_LIST_ITEM"
    data-test-id="DATE_TIME_RANGE_SELECTOR_DROPDOWN_PREDEFINED_LIST_ITEM"
    disabled={true}
    tabIndex={0}
  />
</div>
`;

exports[`Date Time Range Selector Predefined List should render correctly when selected predefined range has argument 1`] = `
.c0 {
  background: #F0F3F7;
  border-right: 1px solid #D1DBE8;
  width: 140px;
  box-sizing: border-box;
}

.c1 {
  all: unset;
  width: 100%;
  font-size: 13px;
  line-height: 18px;
  display: inline-block;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  word-wrap: normal;
  padding: 8px 10px;
  box-sizing: border-box;
  overflow: hidden;
  color: #1C2025;
  cursor: pointer;
  position: relative;
  display: block;
  text-align: left;
}

.c1:focus-visible {
  box-shadow: inset 0 0 0 2px #0376DA;
}

.c1::after {
  content: '';
  position: absolute;
  background: #0376DA;
  width: 4px;
  top: 0;
  right: 0;
  height: 100%;
  display: none;
}

.c2 {
  all: unset;
  width: 100%;
  font-size: 13px;
  line-height: 18px;
  display: inline-block;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  word-wrap: normal;
  padding: 8px 10px;
  box-sizing: border-box;
  overflow: hidden;
  color: #1C2025;
  cursor: pointer;
  position: relative;
  display: block;
  text-align: left;
}

.c2:focus-visible {
  box-shadow: inset 0 0 0 2px #0376DA;
}

.c2::after {
  content: '';
  position: absolute;
  background: #0376DA;
  width: 4px;
  top: 0;
  right: 0;
  height: 100%;
  display: block;
}

.c4 {
  all: unset;
  width: 100%;
  font-size: 13px;
  line-height: 18px;
  display: inline-block;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  word-wrap: normal;
  padding: 8px 10px;
  box-sizing: border-box;
  overflow: hidden;
  color: #1C2025;
  cursor: default;
  position: relative;
  display: block;
  text-align: left;
}

.c4:focus-visible {
  box-shadow: inset 0 0 0 2px #0376DA;
}

.c4::after {
  content: '';
  position: absolute;
  background: #0376DA;
  width: 4px;
  top: 0;
  right: 0;
  height: 100%;
  display: none;
}

.c3 {
  width: 28px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin: -7px 3px -6px 4px;
  text-align: center;
  position: relative;
}

<div
  className="c0"
  data-id="DATE_TIME_RANGE_SELECTOR_DROPDOWN_PREDEFINED_LIST"
  data-test-id="DATE_TIME_RANGE_SELECTOR_DROPDOWN_PREDEFINED_LIST"
>
  <button
    className="c1"
    data-id="DATE_TIME_RANGE_SELECTOR_DROPDOWN_PREDEFINED_LIST_ITEM"
    data-test-id="DATE_TIME_RANGE_SELECTOR_DROPDOWN_PREDEFINED_LIST_ITEM"
    onClick={[Function]}
    tabIndex={0}
  >
    Today
  </button>
  <button
    className="c2"
    data-id="DATE_TIME_RANGE_SELECTOR_DROPDOWN_PREDEFINED_LIST_ITEM"
    data-test-id="DATE_TIME_RANGE_SELECTOR_DROPDOWN_PREDEFINED_LIST_ITEM"
    onClick={[Function]}
    tabIndex={0}
  >
    Last
    <div
      className="c3"
      data-id="DATE_TIME_RANGE_SELECTOR_DROPDOWN_PREDEFINED_LIST_INPUT_CONTAINER"
      data-test-id="DATE_TIME_RANGE_SELECTOR_DROPDOWN_PREDEFINED_LIST_INPUT_CONTAINER"
    >
      <Input
        hasError={false}
        maxLength={2}
        name="LAST_X_WEEKS"
        onChange={[Function]}
        size="small"
        testId="DATE_TIME_RANGE_SELECTOR_DROPDOWN_PREDEFINED_LIST_INPUT"
        theme={
          {
            "horizontalSpacing": "4px",
            "minWidth": 0,
            "verticalSpacing": 0,
            "width": "28px",
          }
        }
        value="1"
      />
    </div>
    Weeks
  </button>
  <button
    className="c4"
    data-id="DATE_TIME_RANGE_SELECTOR_DROPDOWN_PREDEFINED_LIST_ITEM"
    data-test-id="DATE_TIME_RANGE_SELECTOR_DROPDOWN_PREDEFINED_LIST_ITEM"
    disabled={true}
    tabIndex={0}
  />
</div>
`;
